--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  cloud_firestore: ^5.6.8
+  firebase_storage: ^12.4.6
+  firebase_auth: ^5.5.4
+  firebase_messaging: ^15.2.6
+  firebase_core: ^3.13.1
+  calendar_date_picker2: ^2.0.1
 
 dev_dependencies:
   flutter_test:
