--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   firebase_messaging: ^15.2.6
   firebase_core: ^3.13.1
   calendar_date_picker2: ^2.0.1
-
+  flutter_web_auth_2: ^4.1.0
+  google_sign_in: ^6.1.4
+  http: ^1.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
